--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/gsap.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.8.0/ScrollTrigger.min.js"></script>      
-        <script src="/js/main.js"></script>
+        <script src="js/main.js"></script>
 
 
     
